--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && npx tsc",
-    "dev": "npx nodemon  -e js,ts --watch src ./src/index.ts",
-    "start": "npm run build && node build/index.js",
+    "dev": "cross-env NODE_ENV=development npx nodemon  -e js,ts --watch src ./src/index.ts",
+    "start": "cross-env NODE_ENV=production npm run build && node build/index.js",
+    "test": "cross-env NODE_ENV=test jest",
     "lint": "eslint ./ --ext ts",
     "lint:fix": "eslint --fix --ext .ts .",
-    "prettier": "prettier --check src/**/*.ts --check test/**/*.test.ts",
-    "prettier:fix": "prettier --check src/**/*.ts --check test/**/*.test.ts --write"
+    "prettier": "prettier --check src/**/*.ts --check tests/**/*.test.ts",
+    "prettier:fix": "prettier --check src/**/*.ts --check tests/**/*.test.ts --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "cross-env": "^7.0.3"
+  },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -25,9 +30,11 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
