--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,11 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "react/jsx-filename-extension": "off"
+  }
 }
