--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev": "cross-env NODE_ENV=development npx nodemon  -e js,ts --watch src ./src/index.ts",
     "start": "cross-env NODE_ENV=production npm run build && node build/index.js",
     "test": "cross-env NODE_ENV=test jest",
-    "lint": "eslint ./ --ext ts",
+    "lint": "eslint ./src --ext ts",
     "lint:fix": "eslint --fix --ext .ts .",
     "prettier": "prettier --check src/**/*.ts --check tests/**/*.test.ts",
-    "prettier:fix": "prettier --check src/**/*.ts --check tests/**/*.test.ts --write"
+    "prettier:fix": "prettier --check src/**/*.ts --check tests/**/*.test.ts --write",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,8 @@
     "cross-env": "^7.0.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@tsconfig/node16": "^1.0.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.15.0",
@@ -30,7 +33,9 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
@@ -42,5 +47,8 @@
     "arrowParens": "avoid",
     "singleQuote": true,
     "semi": true
+  },
+  "lint-staged": {
+    "*.(js|ts)": "npm run lint"
   }
 }
