--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && npx tsc",
+    "build": "rimraf ./build && npx tsc -p tsconfig.json",
     "dev": "cross-env NODE_ENV=development npx nodemon  -e js,ts --watch src ./src/index.ts",
     "start": "cross-env NODE_ENV=production npm run build && node build/index.js",
     "test": "cross-env NODE_ENV=test jest",
