--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
       }
     },
     {
-      "files": ["*.ts"],
+      "files": ["*.test.ts"],
       "parserOptions": {
         "project": ["./tsconfig.tests.json"]
       }
