chore: add more paths in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
+      "@breed/*": ["./app/breed/*"],
+      "@pet-ad/*": ["./app/pet-ad/*"],
       "@shared/*": ["./app/shared/*"],
+      "@user/*": ["./app/user/*"],
     },
     "outDir": "build"
   },
