--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hexagonal-api",
+  "name": "clean-petter-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/app/index.ts",
