--- a/package.json
+++ b/package.json
@@ -19,13 +19,21 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.11.0",
-    "cross-env": "^7.0.3"
+    "awilix": "^8.0.0",
+    "bcrypt": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@tsconfig/node16": "^1.0.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
