--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
   },
   "extends": "@tsconfig/node16/tsconfig.json",
   "exclude": ["jest.config.ts"],
-  "include": ["./src/app/**/*"]
+  "include": ["./src/app/**/*", "environment.d.ts"]
 }
