feat: add authentication in handle-request

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
     "project": "./tsconfig.json"
   },
   "overrides": [
-		{
+    {
       "files": ["*.ts"],
       "parserOptions": {
         "project": ["./tsconfig.json"]
@@ -23,9 +23,14 @@
         "project": ["./tsconfig.tests.json"]
       }
     }
-	],
+  ],
   "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["jest.config.ts", "environment.d.ts", "build"],
+  "ignorePatterns": [
+    "jest.config.ts",
+    "environment.d.ts",
+    "express.d.ts",
+    "build"
+  ],
   "rules": {
     "import/prefer-default-export": "off",
     "react/jsx-filename-extension": "off",
