--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^4.11.0",
     "awilix": "^8.0.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -31,6 +32,7 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@tsconfig/node16": "^1.0.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
@@ -71,7 +73,13 @@
     "watch": [
       "src"
     ],
-    "exec": "node -r tsconfig-paths/register -r ts-node/register ./src/app/index.ts",
+    "env": {
+      "NODE_ENV": "development",
+      "TS_NODE_PROJECT": "./tsconfig.json"
+    },
+    "execMap": {
+      "ts": "node --require ts-node/register/transpile-only --require tsconfig-paths/register"
+    },
     "ext": "ts, js"
   }
 }
