--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "node-fetch": "^3.3.1",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "uuid": "^9.0.0"
