--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,13 @@
     "paths": {
       "@breed/*": ["./app/breed/*"],
       "@pet-ad/*": ["./app/pet-ad/*"],
+      "@pet-ad-request/*": ["./app/pet-ad-request/*"],
       "@shared/*": ["./app/shared/*"],
-      "@user/*": ["./app/user/*"],
+      "@user/*": ["./app/user/*"]
     },
     "outDir": "build"
   },
-  "extends": "@tsconfig/node16/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "exclude": ["jest.config.ts"],
   "include": ["./src/app/**/*", "environment.d.ts", "express.d.ts"]
 }
