--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
     "node-fetch": "^3.3.1",
     "pino": "^8.11.0",
@@ -39,6 +40,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/formidable": "^2.0.5",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.0",
