--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/node": "^7.46.0",
     "awilix": "^8.0.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.36.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
